<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/open_db"
        android:icon="@drawable/ic_more_navbar"
        android:id="@+id/open_db"/>
    <item
        android:title="@string/sql_db_export"
        android:icon="@drawable/ic_more_navbar"
        android:id="@+id/sql_db_export"/>
    <item
        android:title="@string/delete_db"
        android:icon="@drawable/ic_more_navbar"
        android:id="@+id/delete_db"/>
    <item
        android:title="@string/create_to_desktop"
        android:icon="@drawable/ic_more_navbar"
        android:id="@+id/create_to_desktop"/>

    <item
        android:title="@string/rename"
        android:icon="@drawable/ic_more_navbar"
        android:id="@+id/pop_rename"/>

    <item
        android:title="@string/sql_info"
        android:icon="@drawable/ic_more_navbar"
        android:id="@+id/sql_info"/>

</menu>